--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,4 +12,4 @@ jobs:
         uses: JJ/github-pr-contains-action@releases/v0
         with:
           github-token: ${{ github.token }}
-          diffContains: 'Test'
+          bodyContains: ['text']
