--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,7 +9,7 @@ jobs:
     timeout-minutes: 60
     steps:
       - name: Check PR
-        uses: JJ/github-pr-contains-action@releases/v0
+        uses: JJ/github-pr-contains-action@releases/v2
         with:
           github-token: ${{ github.token }}
-          bodyContains: 'text'
+          diffContains: 'text'
