--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,15 +1,11 @@
-name: check-word-presence
+name: Check License Lines
 
 on: pull_request
-
+  
 jobs:
-  check:
-    name: Check word presence
-    runs-on: macOS-latest
-    timeout-minutes: 60
+  check-license-lines:
+    runs-on: ubuntu-latest
     steps:
-      - name: Check PR
-        uses: JJ/github-pr-contains-action@releases/v0
-        with:
-          github-token: ${{ github.token }}
-          bodyContains: ['text']
+    - uses: actions/checkout@master
+    - name: Check License Lines
+      uses: kt3k/license_checker@v1.0.3
