--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,4 +1,3 @@
 {
-    "**/*.dart": "// Copyright 2021 Tetiana. All rights reserved. MIT license.",
-    "**/*.js": "// Copyright 2021 Tetiana. All rights reserved. MIT license."
+    "**/*.dart": "// Copyright 2021 Tetiana. All rights reserved. MIT license."
 }
