--- a/.licenserc.json
+++ b/.licenserc.json
@@ -2,5 +2,9 @@
     "**/*.dart": [
         "// Use of this source code is governed by the Apache License, Version 2.0",
         "// that can be found in the LICENSE file."
+    ],
+    "**/*.js": [
+        "// Use of this source code is governed by the Apache License, Version 2.0",
+        "// that can be found in the LICENSE file."
     ]
 }
