--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,9 +1,5 @@
 {
-    "**/*.dart": [
-        "// Use of this source code is governed by the Apache License, Version 2.0",
-        "// that can be found in the LICENSE file."
-    ],
-    "**/*.js": [
+    "**/*.{js,dart}": [
         "// Use of this source code is governed by the Apache License, Version 2.0",
         "// that can be found in the LICENSE file."
     ]
