--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,6 +1,3 @@
 {
-    "**/*.{js,ts}": [
-        "// Use of this source code is governed by the Apache License, Version 2.0",
-        "// that can be found in the LICENSE file."
-    ]
+    "**/*.{js,ts}": "This matches any .js and .ts files"    
 }
