--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,3 +1,6 @@
 {
-    "**/*.{js,ts}": "This matches any .js and .ts files"    
+    "**/*.{js,dart}": [
+        "// Use of this source code is governed by the Apache License, Version 2.0",
+        "// that can be found in the LICENSE file."
+      ] 
 }
