--- a/.licenserc.json
+++ b/.licenserc.json
@@ -2,5 +2,8 @@
     "**/*.{js,dart}": [
         "// Use of this source code is governed by the Apache License, Version 2.0",
         "// that can be found in the LICENSE file."
-      ] 
+      ],
+      "ignore": [
+        "**/{docs, design}/"
+      ]
 }
