--- a/.licenserc.json
+++ b/.licenserc.json
@@ -4,6 +4,6 @@
         "// that can be found in the LICENSE file."
       ],
       "ignore": [
-        "**/{docs, design}/"
+        "**/docs"
       ]
 }
